k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uploadstream
  labels:
    name: uploadstream
